syntax = "proto3";

option java_package = "com.sunbird.test.datastore";
option java_multiple_files = true;

message UserPreferences{
  bool show_completed = 1;

  enum SortOrder{
    UNSPECIFIED = 0;
    NONE = 1;
    BY_DEADLINE = 2;
    BY_PRIORITY = 3;
    BY_DEADLINE_AND_PRIORITY = 4;
  }

  // user selected tasks sorting order
  SortOrder sort_order = 2;
}